修改投资部分控制器

--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -285,10 +285,11 @@
 	<script src="__PUBLIC__/js/public/tab.js" ></script>
 	<script  src="__PUBLIC__/js/wallet/waller.js?v=1.1.0" ></script>
 	<script src="__PUBLIC__/plugins/layer/layer-min.js"></script>
-	<script src="/public/plugins/qrcode/qrcode.min.js"></script>
 	<!--底部nav=>Tab功能-->
 	<script src="__PUBLIC__/js/public/bottomNavJs.js"></script>
 	<script src="__PUBLIC__/js/public/clipboard.js"></script>
+	<script src="__PUBLIC__/js/public/publicAlert.js"></script>
+
 	  <script>
        
 	</script>
