--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -188,7 +188,7 @@
 									<input type="hidden" name="dynamic_wallet" id="dynamic_wallet" value=""> -->
 									<!-- <input type="hidden" name="bonus_wallet" id="bonus_wallet" class="bonus_wallet" value="">
 									<input type="hidden" name="rate_wallet" id="rate_wallet" class="rate_wallet" value="">							 -->
-								<span>复投数量:</span> <input id="cu_num" name="cu_num" type="number"  /><br />
+								<span>复投数量:</span> <input id="cu_num" name="cu_num" type="number"/><br />
 							</div>
 							<!--000-->
 							
@@ -376,8 +376,6 @@
 				     
 				    var val = $(".popover_click").attr("data-id") 
 					var val1 = $(".voting_click").attr("data-id") 
-					console.log(val)
-					console.log(val1)
 					// console.log($('#handleposition').serialize())
 					var url = "{:url('Index/pick')}";
 					var datas =  $('#handleposition').serialize()+'&type='+val;
@@ -424,21 +422,11 @@
 								 });
 														 
 							 }
-							//  else if(data.status == 2){
-							// 	 layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-							// 	 // window.location.reload(); 
-							// 	 });
-							//  }else if(data.status == 3){
-							// 	 layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-							// 	 // window.location.reload(); 
-							// 	 });
-							//  }else{
-							// 		 // layer.msg(data.msg, {icon: 2, anim: 0, time: 2000});
-							// 		 layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-							// 		 // window.location.reload(); 
-							// 		 });
-							// 			 // window.location.reload(); 
-							//  }
+							 else{	 
+									layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
+									 	window.location.reload(); 
+									});
+							 }
 						 });
  
  
