--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -99,7 +99,7 @@
 					</form>
 					<div class="login-new">
 						<a href="{:url('login/index')}" class="register">已有账号 登录</a>
-						<a href="">用户协议</a>
+						<!--<a href="">用户协议</a>-->
 					</div>
 				</div>
 </body>
