--- a/public/css/home/totalRevence_zp.css
+++ b/public/css/home/totalRevence_zp.css
@@ -32,10 +32,12 @@
     color: #fff;
     font-size: 0.26rem;
     background-color: #5462af;
+    margin: 0 0.1rem;
 }
 .totalRevenue-wrap .tbody-zp ul li div{
     width: 25%;
     text-align: center;
+    margin: 0 0.1rem;
 }
 .totalRevenue-wrap .tbody-zp ul li:nth-child(odd){
     background-color: #5462af;
