--- a/application/index/view/index_totalrevenue.html
+++ b/application/index/view/index_totalrevenue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/home/totalRevence_zp.css?v=888">
 </head>
 <body>
     <div class="wrapper totalRevenue-wrap">
