--- a/application/index/view/login_directdrive.html
+++ b/application/index/view/login_directdrive.html
@@ -15,9 +15,17 @@
         <!-- 头部 -->
         <div class="header-zp">
             <span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
-            <h3>我的团队</h3>
+            <h3>我的业绩</h3>
             <!-- <span class="share-btn"><img src="../image/public/share-btn-zp.png" /></span> -->
         </div>
+        <!-- 社区业绩-s  -->
+        <div class="community">
+            <div class="community_content">
+                社区业绩
+                <div class="community_num">$&nbsp;<strong>99999999</strong></div>
+            </div>
+        </div>
+        <!-- 社区业绩-e  -->
         <!-- 标题 -->
         <div class="thead-zp">
             <ul>
