--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -230,6 +230,7 @@
 								$('.bonus_wallet1').val(data['result']['bonus_wallet']);
 								// $('#dynamic_wallet').val(data['result']['dynamic_wallet']);
 								$('.rate_wallet1').val(data['result']['rate_wallet']);
+								console.log(data['result']['rate_wallet']);
 								// $('#wallet_addr').val(data['result']['wallet_addr']);								
 								$('.voting').show()
 						} else {
@@ -375,15 +376,6 @@
 									layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
 									window.location.reload(); 
 								});
-														
-							}else if(data.status == 2){
-								layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-								// window.location.reload(); 
-								});
-							}else if(data.status == 3){
-								layer.msg(data.msg, {icon: 2, time: 2000}, function(){					
-								// window.location.reload(); 
-								});
 							}
 							else {
 									// layer.msg(data.msg, {icon: 2, anim: 0, time: 2000});
@@ -404,8 +396,8 @@
 					//  console.log(val)
 					//  console.log(val1)
 					 // console.log($('#handleposition').serialize())
-					 var url = "{:url('/index/wallet/confirmInvest')}";
-					 
+					//  var url = "{:url('/index/wallet/confirmInvest')}";
+						var url = "{:url('/index/wallet/confirmInvest')}";
 					 var datas =  $('#handleposition1').serialize()+'&wallet_flag='+val1+'&pay_way='+2;
 
 					 $.ajax({
@@ -413,11 +405,11 @@
 						url: url,
 						data:datas,
 						dataType: "json",
-						error: function () {
-								alert('操作失败');
-						},
+						// error: function () {
+						// 		alert('操作失败');
+						// },
 						success: function (data) {
-							if (data.status == 200) {
+							if (data.code == 200) {
 									 layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
 									 window.location.reload(); 
 								 });
