--- a/application/index/view/index_money.html
+++ b/application/index/view/index_money.html
@@ -22,8 +22,7 @@
         <div class="thead-zp">
             <ul>
                 <li>币种名称</li>
-                <li>本金数量</li>
-                <li>全球分红</li>
+                <li>总数量</li>
             </ul>
         </div>
         <div class="tbody-zp">
@@ -32,7 +31,6 @@
                 <li>
                     <div class="name">{$vo.cu_id|cu_get}</div>
                     <div class="number">{$vo.bonus_wallet}</div>
-                    <div class="price">{$vo.rate_wallet}</div>
                 </li>
                 {/foreach}
             </ul>
