修改后台显示

--- a/application/admin/view/income_info.html
+++ b/application/admin/view/income_info.html
@@ -27,7 +27,7 @@
                 <th>投资币种</th>
                 <th>币种价格</th>
                 <th>投资金额</th>
-                <th>收益总币数</th>
+                <th>投资总币数</th>
                 <th>投资日期</th>
                 <th>凭证</th>
                 <th>支付方式</th>
