--- a/application/admin/view/withdrawal_detail.html
+++ b/application/admin/view/withdrawal_detail.html
@@ -91,6 +91,15 @@
 					<hr>
 					<div class="layui-row">
 					    <div class="layui-col-xs2">
+					      	<div class="grid-demo grid-demo-bg1">应拨币数量</div>
+					    </div>
+					    <div class="layui-col-xs10">
+					      	<div class="grid-demo">{$detail.cu_num-$detail.tb_charge}</div>
+					    </div>
+					</div>
+					<hr>
+					<div class="layui-row">
+					    <div class="layui-col-xs2">
 					      	<div class="grid-demo grid-demo-bg1">电子钱包地址</div>
 					    </div>
 					    <div class="layui-col-xs10">
