修复提现不更新

--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -374,7 +374,7 @@
 					jq.getJSON(url,datas,function(data){						
 							if (data.status == 1) {
 									layer.msg(data.msg, {icon: 1, time: 2000}, function(){					
-									window.location.reload(); 
+									// window.location.reload(); 
 								});
 							}
 							else {
