注册验证码处理ok

--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -83,7 +83,7 @@
 							<span class="from-tit">验证码:</span>
 							<div class="from-icon from-verify">
 								<img src="__PUBLIC__images/login/yanz.png" alt="">
-								<input type="text" placeholder="请输入验证码" value name="verify" class="pptt verify">
+								<input type="text" placeholder="请输入验证码" value="" name="verify" class="pptt verify">
 								<input type="hidden" name="sms_type" value="1" id="sms_type_id">
 							</div>
 							<button class="send-code" type="button">获取验证码</button>
@@ -187,11 +187,13 @@
             suredAlert(body,"验证码不能为空~");
             verify.focus()
             return
-        }else if (!condition.securitycode){  //验证码
-            suredAlert(body,"请输入正确的验证码~");
-            verify.focus()
-            return
-        }
+		}
+		
+		// else if (!condition.securitycode){  //验证码
+        //     suredAlert(body,"请输入正确的验证码~");
+        //     verify.focus()
+        //     return
+        // }
         
         //勾选协议
         if (!condition.iconstate){      //勾选协议
@@ -208,6 +210,7 @@
 						userEmail:userEmail.val(),
 						rec:rec.val(),
 						verify:verify.val(),
+						sms_type:1
 					},
 					dataType:'json',
 					success:function(msg){
@@ -220,12 +223,6 @@
 						}
 					}
 				});
-
-        
-
-       
-        
-    
        
 			})
 		})
