--- a/application/index/view/index_directdrive.html
+++ b/application/index/view/index_directdrive.html
@@ -13,7 +13,7 @@
     <div class="container">
       <h2>我的团队</h2>
     
-      <div class="table-responsive">          
+      <div class="table-responsive" style="padding-top: 40px;">          
        <table class="table table-striped table-bordered">
          <thead>
            <tr>
